# act_pipe

./: .gitignore  CMakeLists.txt  LICENSE  MJDATA.TXT  README.md  claude.md  pyproject.toml  run.txt  setup.txt
aloha/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
aloha/aloha/: constants.py  real_env.py  robot_utils.py
aloha/config/: base_joystick_teleop.yaml  follower_modes_left.yaml  follower_modes_right.yaml  leader_modes_left.yaml  leader_modes_right.yaml  rs_cam.yaml
aloha/launch/: aloha_bringup.launch.py  test_cam_side.launch.py
aloha/resource/: 99-fixed-interbotix-udev.rules
aloha/rviz/: aloha.rviz
aloha/scripts/: auto_record.sh  calibration_motor.py  dual_side_teleop.py  dual_side_teleop_current.py  get_episode_len.py  get_xsarm_serial.sh  record_episodes.py  replay_and_record_episodes.py  replay_episodes.py  sleep.py  sleep_init_pose.py  visualize_episodes.py
assets/: fr_camera.yml  leap_camera.yml  toddlerbot_camera.yml
config/: aloha.gin  arx.gin  fr.gin  fr3.gin  fr_vlm.gin  g1.gin  leap.gin  leap_model_based.gin  leap_vlm.gin  toddlerbot.gin  toddlerbot_dp.gin  toddlerbot_model_based.gin  toddlerbot_vlm.gin
descriptions/: __init__.py  default.yml  description_claude.md
descriptions/aloha/: aloha_mobile.xml  aloha_mobile_scene.xml  motors.yml  robot.yml
descriptions/arx_arm/: arx_arm_fixed.xml  robot.yml  scene_fixed.xml
descriptions/fr/: fr.xml  robot.yml  scene.xml
descriptions/fr3/: fr3.xml  robot.yml
descriptions/leap_hand/: left_hand_draw_fixed.xml  left_hand_fixed.xml  left_hand_mjx_fixed.xml  left_hand_pos_fixed.xml  motors.yml  robot.yml  scene_fixed.xml  scene_object_fixed.xml
descriptions/toddlerbot_2xm/: kneel_2xm.lz4  motors.yml  robot.yml  scene_ball.xml  scene_teleop.xml  toddlerbot_2xm.urdf  toddlerbot_2xm.xml  toddlerbot_2xm_fixed.xml  toddlerbot_2xm_mjx.xml  toddlerbot_2xm_mjx_fixed.xml  toddlerbot_2xm_model_based.xml  toddlerbot_2xm_pos.xml  toddlerbot_2xm_pos_fixed.xml
descriptions/unitree_g1/: README.md  g1.xml  g1_fixed.xml  g1_with_hands_fixed.xml  robot.yml  scene_fixed.xml  scene_with_hands.xml  scene_with_hands_fixed.xml
diffusion_policy/: README.md  __init__.py  dp_model.py  teleop_dataset.py  train.py
diffusion_policy/models/: __init__.py  diffusion_model.py
diffusion_policy/utils/: __init__.py  dataset_utils.py  model_utils.py  traj_utils.py
hybrid_servo/: README.md  __init__.py  utils.py
hybrid_servo/algorithm/: __init__.py  ochs.py  solvehfvc.py
hybrid_servo/tasks/: __init__.py  bimanual_ochs.py  multi_finger_ochs.py
minimalist_compliance_control/: compliance_ref.py  controller.py  ik_solvers.py  utils.py  visualization.py  wrench_estimation.py  wrench_sim.py
policy/: admittance_only.py  admittance_teleop_claude.md  compliance.py  compliance_dp.py  compliance_model_based.py  compliance_model_based_leap.py  compliance_model_based_toddlerbot.py  compliance_teleop.py  compliance_teleop_right.py  compliance_vlm.py  plot_log_data.py  run_affordance_prediction.py  run_policy.py
real_world/: IMU.py  README.md  arx_controller.py  calibrate_zero.py  camera.py  compliance_teleop.py  g1_controller.py  real_world_aloha_ros2.py  real_world_arx.py  real_world_claude.md  real_world_dynamixel.py  real_world_g1.py
real_world/aloha/: constants.py  robot_utils.py
real_world/dynamixel/: __init__.py
results/fr_compliance_mujoco_20260324_095154/: compliance_log.lz4  log_data.lz4  runner_meta.json
results/fr_compliance_mujoco_20260324_095227/: compliance_log.lz4  log_data.lz4  runner_meta.json
results/fr_compliance_mujoco_20260324_095314/: compliance_log.lz4  log_data.lz4  runner_meta.json
results/fr_compliance_mujoco_20260324_095403/: compliance_log.lz4  runner_meta.json
results/fr_compliance_mujoco_20260324_100829/: compliance_log.lz4  log_data.lz4  runner_meta.json
results/fr_compliance_vlm_mujoco_20260327_210046/: compliance_log.lz4  runner_meta.json
results/fr_compliance_vlm_mujoco_20260327_210202/: compliance_log.lz4  runner_meta.json
sim/: base_sim.py  sim.py
vlm/: README.md  __init__.py
vlm/affordance/: __init__.py  affordance_predictor.py  compliance_predictor.py  model_provider.py  plan_ee_pose.py
vlm/depth/: __init__.py  depth_utils.py  foundation_stereo.py  rectifier.py
vlm/servers/: foundation_model_server.py  foundation_stereo_server.py  (+2 more)
(+35 files in other folders)
